Support room-specific prompts